--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "devStart": "nodemon index.js"
+    "start": "nodemon index.js",
+    "devStart": "nodemon index.js -V"
   },
   "author": "",
   "license": "ISC",
@@ -13,12 +13,14 @@
     "@hapi/joi": "^17.1.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
+    "crypto": "^1.0.1",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.2"
+    "mongoose": "^5.13.2",
+    "nodemailer": "^6.6.3"
   },
   "devDependencies": {
-    "nodemon": "^2.0.10"
+    "dotenv": "^10.0.0",
+    "nodemon": "^2.0.12"
   }
 }
